<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".activity.ForgotActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Forgot Password"
                android:textColor="@color/colorblack"
                android:textSize="22dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txtmessege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="Chack your email"
                android:textColor="@color/colorAccent"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colortext"
            android:hint="@string/enteremial"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:id="@+id/lvl_sendpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/ed_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="OTP" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/newpassword"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ed_conpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:hint="@string/confpassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:padding="3dp">


            <Button
                android:id="@+id/btn_singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/forgot"
                style="@style/Font"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>