<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorwhite"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/chopslogo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:singleLine="true"
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:layout_marginTop="10dp"
                android:hint="@string/enteremial"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext" />

            <EditText
                android:singleLine="true"
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="Forgot Password ?  "
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="By login, you agree to our Terms and Policy"
                android:textColor="@color/colorblack" />

            <Button
                android:id="@+id/btn_singup"
                style="@style/Font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/singin"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Don't have an account? "
                    android:textColor="@color/colortext" />

                <TextView
                    android:id="@+id/btn_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/singup"
                    style="@style/Font"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>