<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorwhite"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.SignInOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/chopslogo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:background="@drawable/edittext"
                        android:layout_marginTop="10dp"
                        android:paddingTop="7dp"
                        android:singleLine="true"
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/mobile"
                        android:textColor="@color/colortext"
                        android:textColorHint="@color/colortext"
                        android:drawableLeft="@drawable/ic_smartphone"
                        android:drawablePadding="8dp"
                        android:inputType="phone"
                        android:maxLength="10"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="25sp"
                android:text="By login, you agree to our Terms and Policy"
                android:textColor="@color/colorblack" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/Font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/singin"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Don't have an account? "
                    android:textColor="@color/colortext" />

                <TextView
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/singup"
                    style="@style/Font"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>